--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   },
   "dependencies": {
     "hono": "^4.7.4",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.21"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "^22.13.11"
   }
 }
